force-app/main/default/objects/Pilot_Scorecard_Result__c/Pilot_Scorecard_Result__c.object-meta.xml
<CustomObject>
    <description>Aggregated pass/fail scorecard metrics for one pilot run and spreading path.</description>
    <label>Pilot Scorecard Result</label>
    <nameField>
        <displayFormat>SCR-{0000}</displayFormat>
        <label>Pilot Scorecard Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pilot Scorecard Results</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>