force-app/main/default/objects/Pilot_Scorecard_Result__c/fields/Actual_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Time__c</fullName>
    <label>Actual Time</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>