force-app/main/default/objects/Pilot_Scorecard_Result__c/fields/Baseline_Time__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Time__c</fullName>
    <label>Baseline Time</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>