force-app/main/default/objects/Pilot_Scorecard_Result__c/fields/Certification_Rate__c.field-meta.xml
<CustomField>
    <fullName>Certification_Rate__c</fullName>
    <label>Certification Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>