force-app/main/default/objects/Pilot_Scorecard_Result__c/fields/Certified_Count__c.field-meta.xml
<CustomField>
    <fullName>Certified_Count__c</fullName>
    <label>Certified Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>