force-app/main/default/objects/Pilot_Scorecard_Result__c/fields/Dollar_Weighted_Accuracy__c.field-meta.xml
<CustomField>
    <fullName>Dollar_Weighted_Accuracy__c</fullName>
    <label>Dollar Weighted Accuracy</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>