force-app/main/default/objects/Pilot_Scorecard_Result__c/fields/Exact_Match_Rate__c.field-meta.xml
<CustomField>
    <fullName>Exact_Match_Rate__c</fullName>
    <label>Exact Match Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>