force-app/main/default/objects/Pilot_Scorecard_Result__c/fields/Exception_Count__c.field-meta.xml
<CustomField>
    <fullName>Exception_Count__c</fullName>
    <label>Exception Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>