force-app/main/default/objects/Pilot_Scorecard_Result__c/fields/Line_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Count__c</fullName>
    <label>Line Item Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>