force-app/main/default/objects/Pilot_Scorecard_Result__c/fields/Pilot_Run__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Run__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pilot Run</label>
    <referenceTo>Spread_Pilot_Run__c</referenceTo>
    <relationshipLabel>Scorecard Results</relationshipLabel>
    <relationshipName>Scorecard_Results</relationshipName>
    <type>Lookup</type>
</CustomField>