force-app/main/default/objects/Pilot_Scorecard_Result__c/fields/Time_Reduction__c.field-meta.xml
<CustomField>
    <fullName>Time_Reduction__c</fullName>
    <label>Time Reduction</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>