force-app/main/default/objects/Pilot_Scorecard_Result__c/fields/Uncaught_Material_Errors__c.field-meta.xml
<CustomField>
    <fullName>Uncaught_Material_Errors__c</fullName>
    <label>Uncaught Material Errors</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>